--- a/app/src/main/res/layout/dialog_verifyingisok_layout.xml
+++ b/app/src/main/res/layout/dialog_verifyingisok_layout.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="欢迎来到面具公园!请勿把账户泄露给他人,一经发现登录异常,账户会被自动冻结"
+            android:text="欢迎来到约会公园!请勿把账户泄露给他人,一经发现登录异常,账户会被自动冻结"
             android:textSize="@dimen/text_size_15"
             android:textColor="@color/color_gray_333333"
             android:layout_marginLeft="@dimen/dimen_30"
