--- a/app/src/main/res/layout/item_mephoto_layout.xml
+++ b/app/src/main/res/layout/item_mephoto_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/dp_size_62"
         android:layout_height="@dimen/dp_size_62"
         app:riv_corner_radius="@dimen/dimen_5"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         android:layout_centerInParent="true"/>
 
     <RelativeLayout
@@ -37,18 +37,6 @@
             android:layout_marginBottom="@dimen/dp_size_1"/>
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_mengceng"
-        android:layout_width="@dimen/dp_size_62"
-        android:layout_height="@dimen/dp_size_62"
-        android:background="@drawable/huisetouming_bg_shape"
-        android:layout_centerInParent="true"
-        android:text="+2"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_18"
-        android:gravity="center"
-        android:visibility="gone"/>
-
     <RelativeLayout
         android:id="@+id/rl_RedEnvelopePhotos"
         android:layout_width="@dimen/dp_size_62"
@@ -73,5 +61,17 @@
             android:layout_marginRight="@dimen/dp_size_1"
             android:layout_marginBottom="@dimen/dp_size_1"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_mengceng"
+        android:layout_width="@dimen/dp_size_62"
+        android:layout_height="@dimen/dp_size_62"
+        android:background="@drawable/huisetouming_bg_shape"
+        android:layout_centerInParent="true"
+        android:text="+2"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size_18"
+        android:gravity="center"
+        android:visibility="gone"/>
 
 </RelativeLayout>
