--- a/app/src/main/res/layout/register_activity_layout.xml
+++ b/app/src/main/res/layout/register_activity_layout.xml
@@ -170,14 +170,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/dimen_40">
             <ImageView
                 android:id="@+id/img_weixin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@mipmap/weixin_hui_logo"
-                android:paddingRight="@dimen/dp_10" />
+                android:layout_gravity="center"/>
             <ImageView
+                android:visibility="gone"
                 android:id="@+id/img_qq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
