--- a/app/src/main/res/layout/perfectdata_layout.xml
+++ b/app/src/main/res/layout/perfectdata_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white">
 
@@ -34,11 +35,13 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="@dimen/dimen_20"
                 android:layout_marginBottom="@dimen/dimen_10"/>
-            <com.netease.nim.uikit.common.ui.imageview.HeadImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/img_upHead"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:src="@mipmap/default_head_logo"
+                app:riv_corner_radius="@dimen/dimen_5"
+                android:scaleType="fitXY"
                 android:layout_marginLeft="@dimen/dimen_20"/>
             <LinearLayout
                 android:layout_width="match_parent"
