--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingTop="@dimen/dimen_20"
     android:paddingLeft="@dimen/dimen_15"
@@ -35,11 +36,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ImageView
+            <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/img_header"
                 android:layout_width="72dp"
                 android:layout_height="72dp"
                 android:src="@mipmap/default_head_logo"
+                android:scaleType="fitXY"
+                app:riv_corner_radius="@dimen/dimen_5"
                 android:layout_gravity="center_horizontal"/>
             <LinearLayout
                 android:layout_width="wrap_content"
