处理获取用户个人信息接口请求参数逻辑

--- a/app/src/main/res/layout/item_mephoto_layout.xml
+++ b/app/src/main/res/layout/item_mephoto_layout.xml
@@ -11,7 +11,8 @@
         android:layout_width="@dimen/dp_size_62"
         android:layout_height="@dimen/dp_size_62"
         app:riv_corner_radius="@dimen/dimen_5"
-        android:scaleType="center"
+        android:scaleType="fitXY"
+        android:src="@mipmap/zhanwei_logo"
         android:layout_centerInParent="true"/>
 
     <RelativeLayout
