--- a/app/src/main/res/layout/album_detail_item_layout.xml
+++ b/app/src/main/res/layout/album_detail_item_layout.xml
@@ -41,6 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
+        android:src="@mipmap/zhanwei_logo"
         android:layout_above="@+id/tv_BurnAfterReading"/>
 
     <LinearLayout
