--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -90,8 +90,34 @@
                 android:textColor="@color/color_gray_999999"
                 android:layout_marginTop="@dimen/dimen_10"
                 android:drawableLeft="@mipmap/duigou_logo"
-                android:drawablePadding="@dimen/dimen_5"/>
+                android:drawablePadding="@dimen/dimen_5"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_ZhenRen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="通过系统真人认证"
+                android:textSize="@dimen/text_size_10"
+                android:textColor="@color/color_gray_999999"
+                android:layout_marginTop="@dimen/dimen_10"
+                android:drawableLeft="@mipmap/zhenren_logo"
+                android:drawablePadding="@dimen/dimen_5"
+                android:visibility="gone"/>
+            <TextView
+                android:id="@+id/tv_NvShen"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="通过系统女神认证"
+                android:textSize="@dimen/text_size_10"
+                android:textColor="@color/color_gray_999999"
+                android:layout_marginTop="@dimen/dimen_10"
+                android:drawableLeft="@mipmap/nvshen_logo"
+                android:drawablePadding="@dimen/dimen_5"
+                android:visibility="gone"/>
             <LinearLayout
+                android:id="@+id/ll_vipBg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -197,6 +223,7 @@
                 android:src="@mipmap/fenli_logo"
                 android:layout_marginTop="@dimen/dimen_20"/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_dynamic"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -207,6 +234,7 @@
                 android:paddingBottom="@dimen/dimen_12"
                 android:drawableRight="@mipmap/right_jiantou_logo"/>
             <View
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/activity_grey_bg"/>
@@ -298,6 +326,7 @@
                 android:layout_height="0.5dp"
                 android:background="@color/activity_grey_bg"/>
             <TextView
+                android:visibility="gone"
                 android:id="@+id/tv_Blacklist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -308,10 +337,12 @@
                 android:paddingBottom="@dimen/dimen_12"
                 android:drawableRight="@mipmap/right_jiantou_logo"/>
             <View
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/activity_grey_bg"/>
             <RelativeLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/dimen_12"
@@ -332,6 +363,7 @@
                     android:layout_marginLeft="85dp"/>
             </RelativeLayout>
             <RelativeLayout
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="@dimen/dimen_12"
@@ -360,6 +392,7 @@
                     android:layout_alignParentRight="true"/>
             </RelativeLayout>
             <View
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="0.5dp"
                 android:background="@color/activity_grey_bg"/>
