--- a/app/src/main/res/layout/myphoto_activity_layout.xml
+++ b/app/src/main/res/layout/myphoto_activity_layout.xml
@@ -18,6 +18,7 @@
             android:paddingLeft="@dimen/dimen_15"
             android:paddingRight="@dimen/dimen_15"/>
         <TextView
+            android:id="@+id/tv_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="我的相册"
