处理获取用户个人信息接口请求参数逻辑

--- a/app/src/main/res/layout/blacklist_activity_layout.xml
+++ b/app/src/main/res/layout/blacklist_activity_layout.xml
@@ -19,10 +19,18 @@
         android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/mRecyclerView"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/mRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+            <include
+                layout="@layout/no_data_bg_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+        </RelativeLayout>
     </com.yqbj.yhgy.view.MyRefreshLayout>
 
 </LinearLayout>
