--- a/app/src/main/res/layout/bindphone_layout.xml
+++ b/app/src/main/res/layout/bindphone_layout.xml
@@ -15,6 +15,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="绑定手机号"
