--- a/app/src/main/res/layout/modifypassword_layout.xml
+++ b/app/src/main/res/layout/modifypassword_layout.xml
@@ -31,6 +31,7 @@
         android:layout_marginLeft="@dimen/dimen_15"
         android:padding="@dimen/dimen_15"
         android:background="@drawable/edittext_bg_shape_bg"
+        android:inputType="textPassword"
         android:hint="请输入当前登录密码"
         android:textColorHint="@color/edit_hint_color"
         android:textSize="@dimen/text_size_15"
