--- a/app/src/main/res/layout/settings_activity_layout.xml
+++ b/app/src/main/res/layout/settings_activity_layout.xml
@@ -58,10 +58,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:text="17610860215"
             android:textSize="@dimen/text_size_15"
             android:textColor="@color/color_gray_999999"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:drawableRight="@mipmap/right_jiantou_logo"
+            android:drawablePadding="@dimen/dimen_10"/>
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
