--- a/app/src/main/res/layout/nim_message_item_snapchat.xml
+++ b/app/src/main/res/layout/nim_message_item_snapchat.xml
@@ -1,23 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:id="@+id/message_item_snap_chat_body"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/message_item_snap_chat_imagePhoto"
+            android:layout_width="@dimen/dimen_150"
+            android:layout_height="@dimen/dimen_150"
+            android:layout_gravity="center_vertical"
+            app:riv_corner_radius="@dimen/dimen_10"
+            android:padding="@dimen/dp_size_1"
+            android:gravity="center"
+            android:scaleType="fitXY"/>
+
         <ImageView
             android:id="@+id/message_item_snap_chat_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_150"
+            android:layout_height="@dimen/dimen_150"
             android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:padding="0dip"
-            android:scaleType="centerCrop" />
+            android:padding="0dip"/>
 
         <include layout="@layout/nim_message_item_thumb_progress_bar_text" />
+
+        <TextView
+            android:id="@+id/message_item_snap_chat_tips"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:paddingBottom="@dimen/dimen_30"
+            android:text="阅后即焚的照片"
+            android:textColor="@color/redpackageColor"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/message_item_snap_chat_tips_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center_horizontal"
+            android:paddingBottom="@dimen/dimen_10"
+            android:text="按住查看"
+            android:textColor="#666666"
+            android:textSize="12sp" />
 
     </FrameLayout>
 
@@ -31,26 +61,14 @@
             android:id="@+id/message_item_snap_chat_readed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignRight="@+id/message_item_snap_chat_tips_label"
             android:layout_marginBottom="3dip"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="@dimen/dimen_30"
             android:background="@color/transparent"
             android:text="@string/readed"
             android:textColor="#666666"
             android:textSize="12sp"
             android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/message_item_snap_chat_tips_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/message_item_snap_chat_readed"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:paddingBottom="3dp"
-            android:text="按住查看"
-            android:textColor="#666666"
-            android:textSize="12sp" />
     </RelativeLayout>
 
 </LinearLayout>
