完成真人认证流程，获取Token失败

--- a/app/src/main/res/layout/realpersoncertification_activity_layout.xml
+++ b/app/src/main/res/layout/realpersoncertification_activity_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/white">
 
@@ -64,11 +65,13 @@
 
     </RelativeLayout>
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/img_upPhotos"
         android:layout_width="@dimen/dp_72"
         android:layout_height="@dimen/dp_72"
         android:src="@mipmap/default_head_logo"
+        app:riv_corner_radius="@dimen/dimen_5"
+        android:scaleType="fitXY"
         android:layout_marginTop="@dimen/dp_36"
         android:layout_gravity="center_horizontal"
         android:visibility="visible"/>
