--- a/app/src/main/res/layout/authentication_activity_layout.xml
+++ b/app/src/main/res/layout/authentication_activity_layout.xml
@@ -10,6 +10,7 @@
     <include layout="@layout/nim_toobar_layout"/>
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="认证中心"
