--- a/app/src/main/res/layout/goddesscertification_activity_layout.xml
+++ b/app/src/main/res/layout/goddesscertification_activity_layout.xml
@@ -48,15 +48,12 @@
         android:drawableLeft="@mipmap/dian_logo"
         android:drawablePadding="@dimen/dimen_5"/>
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/img_upPhotos"
-        android:layout_width="@dimen/dp_72"
-        android:layout_height="@dimen/dp_72"
-        app:riv_corner_radius="@dimen/dimen_5"
-        android:scaleType="fitXY"
-        android:src="@mipmap/default_head_logo"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dimen_30"/>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/dimen_15"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
         android:id="@+id/tv_Submission"
