--- a/app/src/main/res/layout/details_activity_layout.xml
+++ b/app/src/main/res/layout/details_activity_layout.xml
@@ -380,6 +380,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
+                        android:background="@color/white"
                         android:layout_centerInParent="true"
                         android:gravity="center"
                         android:visibility="gone">
