--- a/app/src/main/res/layout/cashredpackagedetails_activity_layout.xml
+++ b/app/src/main/res/layout/cashredpackagedetails_activity_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <RelativeLayout
@@ -36,10 +37,11 @@
         android:background="@mipmap/redpackage_top_bg_logo"
         android:layout_below="@+id/view"/>
 
-    <com.netease.nim.uikit.common.ui.imageview.HeadImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/img_header"
         android:layout_width="@dimen/dp_72"
         android:layout_height="@dimen/dp_72"
+        app:riv_corner_radius="@dimen/dimen_5"
         android:src="@mipmap/default_home_head"
         android:layout_below="@+id/view"
         android:layout_centerHorizontal="true"/>
@@ -54,7 +56,7 @@
             android:id="@+id/tv_sendName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="兔依依的红包"
+            android:text=""
             android:textSize="@dimen/text_size_15"
             android:textColor="@color/black"
             android:layout_gravity="center_horizontal"/>
@@ -62,7 +64,6 @@
             android:id="@+id/tv_redPackaheDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="“小小意思，拿去浪吧”"
             android:textSize="@dimen/sp_12"
             android:textColor="@color/text_theme_color"
             android:layout_gravity="center_horizontal"
@@ -84,7 +85,6 @@
                 android:id="@+id/tv_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0.00"
                 android:textSize="@dimen/text_size_30"
                 android:textColor="@color/black"
                 android:layout_marginLeft="@dimen/dimen_5"
