--- a/app/src/main/res/layout/currencyredpackagedetails_activity_layout.xml
+++ b/app/src/main/res/layout/currencyredpackagedetails_activity_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <RelativeLayout
@@ -36,10 +37,11 @@
         android:background="@mipmap/currencyredpackage_top_bg_logo"
         android:layout_below="@+id/view"/>
 
-    <com.netease.nim.uikit.common.ui.imageview.HeadImageView
+    <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/img_header"
         android:layout_width="@dimen/dp_72"
         android:layout_height="@dimen/dp_72"
+        app:riv_corner_radius="@dimen/dimen_5"
         android:src="@mipmap/default_home_head"
         android:layout_below="@+id/view"
         android:layout_centerHorizontal="true"/>
