--- a/app/src/main/res/layout/cashredpackagedetails_activity_layout.xml
+++ b/app/src/main/res/layout/cashredpackagedetails_activity_layout.xml
@@ -42,6 +42,7 @@
         android:layout_width="@dimen/dp_72"
         android:layout_height="@dimen/dp_72"
         app:riv_corner_radius="@dimen/dimen_5"
+        android:scaleType="fitXY"
         android:src="@mipmap/default_home_head"
         android:layout_below="@+id/view"
         android:layout_centerHorizontal="true"/>
